# miniRT

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  OLD-Makefile  README.md  TODO.md  capsMiniRT  en.subject.md  macro_bonus.sh  malloc_history  miniRT
common/: defines.h  definitions.h  objects.h  structs.h
inc/: defines.h  definitions.h  figures.h  ggl_mlx_define.h  minirt.h  objects.h  parse.h  parse_enum.h  solvers.h  structs.h
libs/hooks/: Makefile
libs/hooks/inc/: hooks.h
libs/hooks/src/: camera_hooks.c  camera_orbit_hooks.c  common.c  cylinder_hooks.c  cylinder_rotation_hooks.c  keys_handler.c  light_rotation_hooks.c  main_hooks.c  mouse_handler.c  sphere_hooks.c
libs/inc/: objects.h  structs.h
libs/lib/: CMakeLists.txt  Makefile  README.md
libs/lib/inc/: libft.h
libs/lib/srcs/ext/: ft_atolf.c  ft_char_replace.c  ft_char_utl.c  ft_general_utl.c  ft_remove_lit.c  ft_secure_alloc.c  ft_split_cs.c  ft_strcmp.c  ft_strjoin_char.c  ft_strjoin_clean.c  ft_strlen_ext.c  ft_strndup.c  ft_strnjoin.c  ft_strstr.c  ft_strtrim_clean.c  ft_tab_utl.c
libs/lib/srcs/ft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c
libs/lib/srcs/gnl/: gnl_gnl.c  gnl_utl.c
libs/lib/srcs/lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libs/parser/: Makefile
libs/parser/bns/: cube.c  pyramid.c  square.c
libs/parser/inc/: parse.h  parse_enum.h  structs.h
libs/parser/srcs/: builders.c  cleaners.c  cube.c  cylinder.c  parser_ambient.c  parser_builders.c  parser_camera.c  parser_errors.c  parser_light.c  parser_resolution.c  parser_rgb.c  parser_utils.c  parser_v3d.c  plane.c  pyramid.c  readfile.c  sphere.c  square.c  triangle.c
libs/rgb/: CMakeLists.txt  Makefile  README.md  hola
libs/rgb/inc/: rgb.h
libs/rgb/src/: rgb_algebra.c  rgb_arithmetics.c
libs/solvers/: Makefile
libs/solvers/bns/: pyramid.c  square.c  triangle.c
libs/solvers/inc/: solvers.h
libs/solvers/srcs/: cube.c  plane.c  (+3 more)
libs/v3d/: CMakeLists.txt  Makefile  README.md  hola
libs/v3d/inc/: v3d.h
libs/v3d/src/: v3d_algebra.c  v3d_arithmetics.c  v3d_extra.c  v3d_tools.c  v3d_utils.c
mlx/: mlx.h  mlx_new_image.m
mod/hooks/: CMakeLists.txt  Makefile  README.md  _testo_.txt
mod/hooks/inc/: hooks.h
mod/hooks/src/: camera_handlers.c  camera_hooks.c  camera_translate_handlers.c  keys_handler.c  keys_handlers.c  light_handlers.c  light_rotation_hooks.c  main_hooks.c  modes_handlers.c  normal_handlers.c  objects_handlers.c  selection_handlers.c  special_handlers.c
mod/parser/: CMakeLists.txt  Makefile  README.md  README_parser.md
mod/parser/bns/: cube.c  triangle.c
mod/parser/inc/: parse.h  parse_enum.h
mod/parser/srcs/: box.c  builders.c  cleaners.c  cone.c  cube.c  cylinder.c  ellipsoid.c  hyperboloid.c  paraboloid.c  parser_ambient.c  parser_builders.c  parser_bump.c  parser_camera.c  parser_elements.c  parser_light.c  parser_rgb.c  parser_utils.c  parser_v3d.c  plane.c  pyramid.c  readfile.c  rectangle.c  sphere.c  square.c  triangle.c
mod/solvers/: CMakeLists.txt  Makefile  README.md  README_solver.md
mod/solvers/bns/: box.c  cone.c  cube.c  ellipsoid.c  hyperboloid.c  paraboloid.c  pyramid.c  rectangle.c  square.c  triangle.c
mod/solvers/inc/: solvers.h
mod/solvers/srcs/: box.c  box_bonus.c  cone.c  cylinder.c  cylinder_tops.c  ellipsoid.c  normals.c  plane.c  quadratic.c  rectangle.c  solvers.c  sphere.c  triangle.c
scenes/: 42_logo.rt  atom_mandatory.rt  bonus_atom.rt  bonus_balls.rt  bonus_box.rt  bonus_colored.rt  bonus_cone.rt  bonus_cone2.rt  bonus_cornellbox.rt  bonus_cornellbox_all.rt  bonus_cornellbox_chessphere.rt  bonus_cornellbox_rainbow.rt  bonus_cornellbox_test.rt  bonus_cylinder.rt  bonus_earth_moon.rt  bonus_ellipsoid.rt  bonus_ellipsoid_2.rt  bonus_moon_poligon.rt  bonus_planets.rt  bonus_planets_diff.rt  bonus_reflection.rt  bonus_reflection_infinity.rt  bonus_reflection_light.rt  bonus_reflection_res.rt  bonus_refraction.rt  bonus_room.rt  bonus_seadawn.rt  bonus_seadawn_rainbow.rt  bonus_seanight.rt  bonus_sphere_poligon.rt  bonus_wolf.rt  cone.rt  cornellbox.rt  cornellboxtocheckleaks.rt  cube.rt  cyl.rt  cylinder.rt  cylinder_mandatory.rt  everything_mandatory.rt  hyper.rt  (+9 more)
scenes_old/: colored_light.rt  compound_figures.rt  cornellbox.rt  cornellboxtocheckleaks.rt  cube.rt  cylinder2.rt  cylinderBizz.rt  cylinder_mandatory.rt  everything.rt  hyper.rt  miniwolf.rt  moonNew.rt  refraction.rt  seadawn.rt  sphere_bonus.rt  sphere_only.rt
srcs/: debug_print.c  minirt.c
srcs/handlers/: camera_handlers.c  camera_translate_handlers.c  keys_handlers.c  light_handlers.c  modes_handlers.c  mouse_handlers.c  normal_handlers.c  objects_handlers.c  selection_handlers.c  special_handlers.c
srcs/hooks/: camera_hooks.c  camera_orbit_hooks.c  cylinder_hooks.c  cylinder_rotation_hooks.c  light_rotation_hooks.c  main_hooks.c  mouse_handler.c  sphere_hooks.c
srcs/intersections/: cube.c  cylinder.c  intersections.c  plane.c  pyramid.c  solver_test.c  solvers.c  sphere.c  square.c  triangle.c
srcs/light/: light.c  light_utils.c
srcs/parser/: cube.c  cylinder.c  parser_ambient.c  parser_builders.c  parser_camera.c  parser_light.c  parser_resolution.c  parser_rgb.c  parser_utils.c  parser_v3d.c  plane.c  pyramid.c  readfile.c  sphere.c  square.c  triangle.c
srcs/rays/: rays.c  tracer.c
srcs/render/: mlx_hooks.c  render.c  render_utils.c
srcs/sampler/: sample_pixel.c  supersample.c
srcs/texture/: bump_texture.c  textures.c
srcs/utl/: after_parse_process.c  error_handling.c  messenger.c  utilities.c
tmpRT/: dragon.rt  test2.rt
(+1 files in other folders)
