# Especifica que este directorio contendr치 un proyecto,
# aunque en este caso ser치 una biblioteca y no un ejecutable.
project(lib)

# A침adir todos los archivos fuente en las subcarpetas
file(GLOB_RECURSE LIB_SOURCES
        srcs/*.c
        srcs/ext/*.c
        srcs/ft/*.c
        srcs/gnl/*.c
        srcs/lst/*.c
        )

# Crear una biblioteca est치tica a partir de los archivos fuente
add_library(lib STATIC ${LIB_SOURCES})

# Incluir los encabezados
target_include_directories(lib PUBLIC inc)